# dsmr2mqtt

./: .gitignore  CHANGES_SUMMARY.md  CONTRIBUTING.md  Dockerfile  JUSTFILE_README.md  P1_parser.py  P1_serial.py  README.md  config.py  docker-compose.e2e.yml  dsmr-mqtt.py  dsmr50.py  hadiscovery.py  justfile  pyproject.toml  unit_parser.py
.github/workflows/: docker-publish.yml
log/: __init__.py  log.py  structured_log.py
mqtt/: mqtt.py
src/dsmr2mqtt/: __init__.py  __main__.py  config.py  dsmr50.py  hadiscovery.py  p1_parser.py  p1_serial.py
src/dsmr2mqtt/log/: __init__.py  log.py  structured_log.py
src/dsmr2mqtt/mqtt/: __init__.py  mqtt.py
systemd/: dsmr-mqtt.service
