[project]
name = "dsmr2mqtt"
version = "4.0.2"
description = "MQTT client for Belgian and Dutch Smart Meter (DSMR) - Slimme Meter"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
authors = [
    { name = "Hans IJntema" }
]
keywords = ["dsmr", "mqtt", "smart-meter", "home-assistant", "energy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "paho-mqtt>=2.0.0",
    "pyserial>=3.5",
    "persist-queue>=0.8.0",
    "packaging>=23.0",
    "pint>=0.24",
]

[project.urls]
Homepage = "https://github.com/thijsmie/dsmr2mqtt"
Repository = "https://github.com/thijsmie/dsmr2mqtt"

[dependency-groups]
dev = []
